# retros

./: README.md  build.sh  geniso.sh  install.sh  runiso.sh
.devcontainer/: Dockerfile  devcontainer.json
src/kernel/: CMakeLists.txt
src/kernel/arch/i386/pc/: boot.S  layout.ld  prelude.c
src/kernel/arch/i386/pc/cpu/: gdt.S  gdt.h  idt.c  idt.h  io.h  isr.S  isr.c  isr.h  paging.S  paging.h  pic.c  pic.h  pit.h  tss.S  tss.c  tss.h
src/kernel/arch/i386/pc/drivers/: vga.c
src/kernel/arch/i386/pc/include/arch/: interrupt.h  timer.h
src/kernel/include/kernel/: font.h  tty.h  vga.h
src/kernel/include/kernel/arch/: interrupt.h  timer.h
src/kernel/kernel/: kernel.c  scheduler.c  scheduler.h
